--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -31,7 +31,7 @@ $texts:#FDFDFD;
 .presentation{
 width: 100%;
 height: 800px;
-background:url(../assets/danielle-cerullo-CQfNt66ttZM-unsplash.jpg);
+background:url(../assets/bg.png);
 background-repeat: no-repeat;
 object-fit: cover;
 color: $simple-text;
