--- a/src/pages/rootLayout.module.scss
+++ b/src/pages/rootLayout.module.scss
@@ -74,6 +74,9 @@ color: $texts;
   &:hover{
   cursor: pointer;
   text-decoration: underline;  
+  }
+  &.ativo{
+  text-decoration: underline;  
   } 
   }
   button{
